#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(AVLDupTree, 1.0.0, "https://github.com/HaikuArchives/AVLDupTree/issues")
AC_CONFIG_SRCDIR([Source/AVLDupTree.c])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([OS.h stdlib.h string.h])

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset strerror])

AC_OUTPUT
